--- a/public/pages/tornei.html
+++ b/public/pages/tornei.html
@@ -2,14 +2,10 @@
 <html lang="it">
   <head>
     <meta charset="UTF-8" />
-<<<<<<< HEAD
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-=======
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"
     />
->>>>>>> 568815a (Update v0.0.5)
     <title>Tornei - Astral Cup</title>
     <link rel="stylesheet" href="../styles/main.css" />
     <link rel="icon" type="image/x-icon" href="../images/astralcup-logo.png" />
@@ -22,11 +18,7 @@
     <nav class="navbar">
       <div class="navbar-container">
         <a href="/" class="navbar-brand">
-<<<<<<< HEAD
-          <img src="../images/astralcup.png" alt="Astral Cup Logo" />
-=======
           <img src="/images/astralcup.png" alt="Astral Cup Logo" />
->>>>>>> 568815a (Update v0.0.5)
           <span>ASTRAL CUP</span>
         </a>
 
@@ -38,12 +30,9 @@
             <li><a href="/memories">Memories</a></li>
             <li><a href="/tornei" class="outline-glow">Tornei</a></li>
           </ul>
-<<<<<<< HEAD
-=======
           <div class="navbar-search-trigger" id="nav-search-trigger">
             <i class="fas fa-search"></i>
           </div>
->>>>>>> 568815a (Update v0.0.5)
           <div class="navbar-actions">
             <a href="/discord" class="btn-discord outline-glow"
               ><i class="fab fa-discord"></i> Login</a
@@ -95,7 +84,7 @@
             <h3>Supporto</h3>
             <ul class="footer-links">
               <li><a href="#">Regolamento</a></li>
-              <li><a href="#">FAQ</a></li>
+z              <li><a href="#">FAQ</a></li>
               <li><a href="#">Contattaci</a></li>
             </ul>
           </div>
@@ -106,11 +95,8 @@
       </div>
     </footer>
     <script src="../js/navbar.js"></script>
-<<<<<<< HEAD
-=======
     <script src="/socket.io/socket.io.js"></script>
     <script src="../js/socket.js"></script>
->>>>>>> 568815a (Update v0.0.5)
     <script src="../js/app.js"></script>
   </body>
 </html>
